Changed classes and methods to reference new JDK methods and SequencedCollections